<resources>
    <string name="app_name">System SSWisgets</string>

    <string name="sound_toggle">Sound Toggle</string>
    <string name="wifi_toggle">WiFi Toggle</string>
    <string name="flash_toggle">Flashlight Toggle</string>
    <string name="bt_toggle">Bluetooth Toggle</string>
    <string name="airplane_toggle">Airplane Mode Toggle</string>
    <string name="music_back">Skip Back</string>
    <string name="music_pp">Play/Pause</string>
    <string name="music_forward">Skip Forward</string>
    <string name="music_text">Song Title</string>

    <string name="color">Color</string>

    <string name="color_desc">Color all the things!</string>

    <string name="toggles">Toggles Screen</string>
    <string name="music">Music Screen</string>

    <string name="play_something">Play Something!</string>

    <string name="music_label">Music Player</string>
    <string name="toggles_label">QuickTools</string>
</resources>
